--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,7 +21,7 @@ jobs:
     services:
       nats:
         image: nats
-        options: --jetstream
+        options: --entrypoint "/nats-server --jetstream"
     env:
       ENVIRONMENT: ci
     needs: [ download ]
