--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,10 +23,6 @@ jobs:
         image: nats
         volumes:
           - /etc/nats
-      jetstream:
-        image: nats
-        volumes:
-          - /etc/nats
     env:
       ENVIRONMENT: ci
     needs: [ download ]
@@ -40,7 +36,7 @@ jobs:
       - run: cd /source && go mod vendor
       - run: wget -O- -nv https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b /source/
       - run: cd /source && ./golangci-lint run ./... --timeout 5m
-      - run: cd /source && environment=ci NATS_HOST="nats://nats:4222" JETSTREAM_HOST="nats://jetstream:4222" go test -json -coverprofile=/root/coverage_temp.txt -covermode=atomic ./... > /root/test.json
+      - run: cd /source && environment=ci NATS_HOST="nats://nats:4222" go test -json -coverprofile=/root/coverage_temp.txt -covermode=atomic ./... > /root/test.json
       - run: cat /root/coverage_temp.txt | grep  -v "_mock.go" | grep -v "_mocks.go" > /root/coverage.txt || true
       - name: Upload coverage report
         uses: codecov/codecov-action@v3
