--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,7 +17,7 @@ jobs:
           retention-days: 1
   test:
     runs-on: ubuntu-latest
-    container: golang:1.19-alpine
+    container: golang:1.21-alpine
     services:
       nats:
         image: skydev/nats-jetstream:latest
@@ -43,6 +43,8 @@ jobs:
           files: /root/coverage.txt
           flags: unittests
       - run: cat /root/test.json
+        if: always()
+      - run: wget https://github.com/mfridman/tparse/releases/latest/download/tparse_linux_x86_64 -O tparse && chmod 777 tparse && ./tparse -all -file=/root/test.json
         if: always()
       - uses: guyarb/golang-test-annotations@v0.6.0
         if: always()
